--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.database=russian
 
 server.error.include-message=always
 
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+
+
